--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ deploy:
   provider: heroku
   api_key:
     secure: 8977c78d-43f0-43b7-9346-485732f0fe8e
+  app: dev-chat-01
+  on:
+    repo: addziedz/devChat
