--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "watch": "nodemon src/server.js"
   },
   "dependencies": {
-    "express": "4.16.3"
+    "express": "4.16.3",
+    "express-handlebars": "3.0.0",
+    "socket.io": "2.1.1"
   },
   "devDependencies": {
     "mocha": "5.2.0",
