--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "watch": "nodemon src/server.js"
   },
   "dependencies": {
+    "body-parser": "1.18.3",
     "express": "4.16.3",
     "express-handlebars": "3.0.0",
     "socket.io": "2.1.1"
