--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "mocha --exit test",
     "watch": "nodemon src/server.js",
     "client": "cd client && npm start",
-    "dev": "concurrently \"npm run watch\" \"npm run client\""
+    "dev": "concurrently \"npm run start\" \"npm run client\""
   },
   "dependencies": {
     "body-parser": "1.18.3",
