--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "scripts": {
-    "format": "prettier --write \"{src,test}/**/*.js\"",
-    "start": "node src/server.js",
-    "heroku-postbuild": "cd client && npm install && npm start",
+    "client": "npm start --prefix client",
+    "buildclient": "npm build --prefix client",
+    "server": "nodemon src/server.js",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "build": "concurrently \"npm run server\" \"npm run client\"",
     "test": "mocha --exit test",
-    "watch": "nodemon src/server.js",
-    "client": "cd client && npm start",
-    "dev": "concurrently \"npm run start\" \"npm run client\""
+    "start": "node src/server.js",
+    "heroku-postbuild": "npm run install --prefix client && npm run build --prefix client",
+    "format": "prettier --write \"{src,test}/**/*.js\""
   },
   "dependencies": {
     "body-parser": "1.18.3",
