master: deploy server and client on heroku - attempt 10

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ install:
 - npm install
 script:
   - sonar-scanner
-  - npm run start
-  - npm run heroku-postbuild
+  - nohup npm run start &
+  - sleep 3
   - npm run test
 cache:
   directories:
