--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "concurrently \"npm run server\" \"npm run client\"",
     "test": "mocha --exit test",
     "start": "node src/server.js",
-    "heroku-postbuild": "npm run install --prefix client && npm run build --prefix client",
+    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client",
     "format": "prettier --write \"{src,test}/**/*.js\""
   },
   "dependencies": {
