--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "socket.io": "2.1.1",
+    "socket.io-client": "^2.1.1",
+    "uws": "^99.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
