--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node src/server.js",
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client",
     "format": "prettier --write \"{src,test}/**/*.js\"",
-    "reinstall": "npm install && cd client && npm install",
-    "build": "concurrently \"npm run server\" \"npm run client\""
+    "reinstall": "npm install && cd client && npm install"
   },
   "dependencies": {
     "body-parser": "1.18.3",
