--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,9 @@
     "react-scripts": "1.1.4",
     "socket.io-client": "^2.1.1"
   },
+  "devDependencies": {
+    "prop-types": "15.6.2"
+  },
   "scripts": {
     "build": "react-scripts build",
     "eject": "react-scripts eject",
