--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4",
+    "semantic-ui-css": "2.3.3",
+    "semantic-ui-react": "0.82.3",
     "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
